--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "istanbul": "^0.4.2",
     "mocha": "^2.4.5",
     "phantomjs-prebuilt": "^2.1.13",
-    "supertest": "^1.2.0"
+    "supertest": "^1.2.0",
+    "is-property": "*",
+    "request": "*"
   },
   "engines": {
     "node": ">= 6.9.x",
